# dusk-tswow

./: .gitignore  build.js  package-lock.json  package.json
misc/client-extensions/: CMakeLists.txt
misc/client-extensions/ClientExtensions/: CMakeLists.txt  ClientDetours.h  ClientExtensions.cpp  ClientExtensions.h  ClientFunctions.h  ClientMPQ.cpp  Main.cpp  SharedDefines.h
misc/client-extensions/ClientExtensions/CDBCMgr/: CDBC.cpp  CDBCMgr.cpp
misc/client-extensions/ClientExtensions/CDBCMgr/CDBCDefs/: OcclusionVolume.h  OcclusionVolumePoint.h
misc/client-extensions/ClientExtensions/Camera/: CVar.cpp  WorldSpace.cpp
misc/client-extensions/ClientExtensions/Character/: CharacterDefines.h  CharacterExtensions.cpp  CharacterExtensions.h
misc/client-extensions/ClientExtensions/CustomLua/: PlayerFunctions.cpp  SpellFunctions.cpp  UIFunctions.cpp
misc/client-extensions/ClientExtensions/Misc/: MiscFixes.cpp  MiscFixes.h
misc/client-extensions/ClientExtensions/Movement/: MovementExtensions.cpp  MovementExtensions.h
misc/client-extensions/ClientExtensions/Spells/: Spells.cpp  Spells.h
misc/client-extensions/ClientExtensions/Text/: TextRendering.cpp
misc/client-extensions/ClientExtensions/Tooltip/: SpellTooltipExtensions.cpp  SpellTooltipExtensions.h
misc/client-extensions/ClientExtensions/Unit/: UnitExtensions.cpp  UnitExtensions.h
misc/client-extensions/ClientExtensions/World/: WorldData.cpp  WorldData.h
misc/client-extensions/ClientExtensions/WowClient/: C2Vector.h  C3Vector.h  CVar.h  MovementInfo.h  WGUID.h  World.h
tswow-core/Public/: TSCreature.h  (+2 more)
(+57 files in other folders)
